# nba-mvp

./: README.md  pyproject.toml
data/: game_2022.csv  game_2022.parquet  player_stat_2022.parquet
helpers/fetching/: create_features.ipynb  fetch_NBA_data.ipynb
helpers/modeling/: modeling.ipynb
